<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">
    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:padding="16dp">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/dialog_header"
            android:textAlignment="center"
            android:textAppearance="@style/TextAppearance.AppCompat.Headline" />
        <TextView
            android:text="@string/dee_rating"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16dip"
            android:textColor="#000000"
            android:paddingLeft="10dip"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/editDeeRating"
            android:maxLength="3" />
        <TextView
            android:text="@string/oll_rating"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:textSize="16dip"
            android:textColor="#000000"
            android:paddingLeft="10dip"
            android:textStyle="bold"/>
        <EditText
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:inputType="number"
            android:id="@+id/editOllRating"
            android:maxLength="3" />
        <Button
            android:id="@+id/rateButton"
            android:layout_width="200dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginTop="15dp"
            android:background="@color/colorPrimary"
            android:text="@string/rate_button"
            android:textColor="#FFF"
            android:onClick="onClickRating" />
    </LinearLayout>
</LinearLayout>